# LAYERxLABS

./: .gitignore  README.md
NetScope/: README.md
SniffCore/: .gitignore  README.md  pyproject.toml
SniffCore/docs/: architecture.md  demo-walkthrough.md  roadmap.md
SniffCore/src/sniffcore/: __init__.py  analysis.py  baseline.py  cli.py  detectors.py  ingest.py  models.py  pipeline.py  reporting.py
SniffCore/tests/: test_phase1.py  test_phase2.py
SniffCore/tests/fixtures/: build_phase2_captures.py  build_sample_capture.py  phase2_baseline_clean.pcap  phase2_suspect_lab.pcap  sample_phase1_lab.pcap
StripSec/: README.md  pyproject.toml
StripSec/docs/: architecture.md
StripSec/src/stripsec/: __init__.py  cli.py  detectors.py  ingest.py  models.py  pipeline.py  reporting.py
StripSec/tests/: test_stripsec.py
StripSec/tests/fixtures/: sample_transport_capture.json
reports/: layer1-layersentinel-review.md
