[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "stripsec"
version = "0.1.0"
description = "Transport downgrade and HTTPS hygiene analysis for controlled lab web sessions."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
stripsec = "stripsec.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["stripsec*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
